--- a/Prodandes/data/html/buscar.htm
+++ b/Prodandes/data/html/buscar.htm
@@ -41,6 +41,7 @@
 		</div>
 		<p><h4><a href="buscarMaterialForm.htm"><FONT SIZE=5>Buscar material</font></a></h4></p>
 		<p><h4><a href="buscarOperarioProductivo.htm"><FONT SIZE=5>Buscar operario mas productivo</font></a></h4></p>
+		<p><h4><a href="darProveedores.htm"><FONT SIZE=5>Consultar proveedores</font></a></h4></p>
 		<p>&nbsp;</p>
 		</body>
 		</html>
