--- a/Prodandes/data/html/servletModificar.htm
+++ b/Prodandes/data/html/servletModificar.htm
@@ -23,7 +23,7 @@
 		<li><a href="home.html">Inicio</a></li>
 		<li><a href="buscar.htm">Buscar</a></li>
 		<li><a href="registrarse.htm">Registrarse</a></li>
-		<li class="active home"><a href="modificar.htm">Modificar</a></li>
+		<li class="active home"><a href=#>Modificar</a></li>
 		<li><a href="#">Jobs</a></li>
 		<li><a href="#">Blog</a></li>
 		<li><a href="#">Contacts</a></li>
@@ -42,6 +42,7 @@
 		<p><h4><a href="servletModificarEtapa.htm"><FONT SIZE=5>Registrar etapa de produccion</font></a></h4></p>
 		<p><h4><a href="#"><FONT SIZE=5>Registrar llegada de material</font></a></h4></p>
 		<p><h4><a href="registrarPedidoProducto.htm"><FONT SIZE=5>Registrar pedido producto</font></a></h4></p>
+		<p><h4><a href="modificarEstacion.htm"><FONT SIZE=5>Modificar estado de estacion de produccion</font></a></h4></p>
 		<p>&nbsp;</p>
 		</body>
 		</html>
