--- a/Prodandes/data/html/servletModificarEtapa.htm
+++ b/Prodandes/data/html/servletModificarEtapa.htm
@@ -23,7 +23,7 @@
 		<li><a href="home.html">Inicio</a></li>
 		<li><a href="buscar.htm">Buscar</a></li>
 		<li><a href="registrarse.htm">Registrarse</a></li>
-		<li class="active home"><a href="modificar.htm">Modificar</a></li>
+		<li><a href="servletModificar.htm">Modificar</a></li>
 		<li><a href="#">Jobs</a></li>
 		<li><a href="#">Blog</a></li>
 		<li><a href="#">Contacts</a></li>
@@ -39,7 +39,7 @@
 		<h4>Registrar etapa</h4>
 		<p>Esta es la operación que indica a ProdAndes que una etapa de producción, correspondiendo a un pedido de un cliente, se va a ejecutar en una estación de producción.</p>
 		</div>
-		<form id="form1" name="form1" method="post" action="buscarMaterialesRes.htm">
+		<form id="form1" name="form1" method="post" action="servletModificarEtapaEfectivo.htm">
 		  <p>
 		    <label for="nombre"><FONT SIZE=7>Nombre:</font></label> 
 		    <input type="text" name="nombre" size="12" style="border: 1px solid #666666; font-size:20pt">
