--- a/Prodandes/data/html/darProveedores.htm
+++ b/Prodandes/data/html/darProveedores.htm
@@ -60,7 +60,7 @@
 		  </p>
 		  <p>&nbsp;</p>
           <p>
-		<input type="submit" name="button" id="button" value="Modificar" />
+		<input type="submit" name="button" id="button" value="Buscar" />
 		</p>
 		</form>
 		<p>&nbsp;</p>
