--- a/Prodandes/data/html/buscarOperarioProductivo.htm
+++ b/Prodandes/data/html/buscarOperarioProductivo.htm
@@ -23,7 +23,7 @@
 		<li><a href="home.html">Inicio</a></li>
 		<li><a href="buscar.htm">Buscar</a></li>
 		<li><a href="registrarse.htm">Registrarse</a></li>
-		<li><a href="modificar.htm">Modificar</a></li>
+		<li><a href="servletModificar.htm">Modificar</a></li>
 		<li><a href="#">Jobs</a></li>
 		<li><a href="#">Blog</a></li>
 		<li><a href="#">Contacts</a></li>
