--- a/Prodandes/data/html/home.html
+++ b/Prodandes/data/html/home.html
@@ -36,6 +36,8 @@
 							<li><a href="ServletRegistrarEntregaPedidoCliente.htm">Registrar entrega de Pedido</a></li>
 							<li><a href="etapasProduccionMayorMovimiento.htm">Mayor movimiento en fechas</a></li>
 							<li><a href="consultarExistenciaUnMaterial.htm">Existencia material</a></li>
+							<li><a href="consultarExistenciaUnMaterial.htm">Cancelar Pedido de Producto</a></li>
+							
 						</ul>
 					</nav>
 					<div class="cl">&nbsp;</div>
