--- a/Prodandes/data/html/home.html
+++ b/Prodandes/data/html/home.html
@@ -45,8 +45,8 @@
 					<div id="carousel"><div>
 							<h5>Todo empieza con</h5>
 							<h3>ProdAndes</h3>
-							<p>Es una aplicación que busca ayudar a las empresas a monitorear y optimizar su procesos de produccion de manera efectiva y eficiente.</p>
-							<a href="#" class="green-btn">Iniciar</a>
+							<p>Es una aplicaciï¿½n que busca ayudar a las empresas a monitorear y optimizar su procesos de produccion de manera efectiva y eficiente.</p>
+							<a href="registrarse.htm" class="green-btn">Iniciar</a>
 							<img class="img-front" src="css/images/front-img.png" alt="dot1" width="263" height="436" />
 							<img class="img-mid" src="css/images/img-mid.png" alt="dot2" width="230" height="363" />
 							<img class="img-back" src="css/images/img-back.png" alt="dot3" width="195" height="304" />
@@ -55,7 +55,7 @@
 						<div>
 							<h5>It all starts with a</h5>
 							<h3>Great Vision</h3>
-							<p>Es una aplicación que busca ayudar a las empresas a monitorear y optimizar su procesos de produccion de manera efectiva y eficiente.</p>
+							<p>Es una aplicaciï¿½n que busca ayudar a las empresas a monitorear y optimizar su procesos de produccion de manera efectiva y eficiente.</p>
 							<a href="#" class="green-btn">FREE Quote</a>
 							<img class="img-front" src="css/images/front-img.png" alt="dot1" width="263" height="436" />
 							<img class="img-mid" src="css/images/img-mid.png" alt="dot2" width="230" height="363" />
@@ -224,7 +224,7 @@
 
 						<p>Email: <a href="#">ja.silva11@uniandes.edu.co</a></p>
 						<p>Telefono: 123-456-7890</p>
-						<p>Dirección: Calle falsa 123, </p>
+						<p>Direcciï¿½n: Calle falsa 123, </p>
 						<p>Template City, 9000</p>
 					</div>
 					<div class="cl">&nbsp;</div>
