Mis reqs terminados y funcionando

--- a/Prodandes/data/html/servletModificar.htm
+++ b/Prodandes/data/html/servletModificar.htm
@@ -43,7 +43,7 @@
 		<p><h4><a href="#"><FONT SIZE=5>Registrar llegada de material</font></a></h4></p>
 		<p><h4><a href="registrarPedidoProducto.htm"><FONT SIZE=5>Registrar pedido producto</font></a></h4></p>
 		<p><h4><a href="modificarEstacion.htm"><FONT SIZE=5>Modificar estado de estacion de produccion</font></a></h4></p>
-		<p><h4><a href="generarPedidos.htm"><FONT SIZE=5>Generar pedido de materia prima / componente</font></a></h4></p>
+		<p><h4><a href="generarPedidos.html"><FONT SIZE=5>Generar pedido de materia prima / componente</font></a></h4></p>
 		<p>&nbsp;</p>
 		</body>
 		</html>
