Commit hiperfuncional a comparacion de los de jose
Mierda RFC6

--- a/Prodandes/data/html/home.html
+++ b/Prodandes/data/html/home.html
@@ -37,6 +37,7 @@
 							<li><a href="etapasProduccionMayorMovimiento.htm">Mayor movimiento en fechas</a></li>
 							<li><a href="consultarExistenciaUnMaterial.htm">Existencia material</a></li>
 							<li><a href="consultarExistenciaUnMaterial.htm">Cancelar Pedido de Producto</a></li>
+					        <li><a href="darClientes.htm">Dar Clientes</a></li>
 							
 						</ul>
 					</nav>
