--- a/Prodandes/data/html/darPedidos.htm
+++ b/Prodandes/data/html/darPedidos.htm
@@ -1,7 +1,7 @@
 <head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
-		<title>Dar clientes</title>
+		<title>Dar pedidos</title>
 		<link rel="shortcut icon" type="image/x-icon" href="css/images/icon.png" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 		<link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css' />
@@ -36,12 +36,12 @@
 		<body>
 		<div id="bg"></div>
 		<div id="carousel"><div>
-		<h4>Consultar informacion sobre clientes</h4>
+		<h4>Consultar informacion sobre pedidos</h4>
 		<p>Filtros.</p>
 		</div>
-		<form id="form1" name="form1" method="post" action="darClientesPro.htm">
+		<form id="form1" name="form1" method="post" action="DarPedidos.htm">
 		  <p>
-		    <label for="numero"><FONT SIZE=7>Numero de clientes:</font></label> 
+		    <label for="numero"><FONT SIZE=7>Numero de pedidos:</font></label> 
 		    <input type="text" name="numero" size="12" style="border: 1px solid #666666; font-size:20pt">
 		  </p>
 		  <p>
@@ -52,7 +52,7 @@
 		 <label for="opcion"><FONT SIZE=7>Filtrar por:</font></label> 
 		 <select name="opcion">
 		 <option value="ID__CLIENTE">Identificacion</option> 
-		 <option value="NOM_PRODUCTO">Identificador del Cliente:</option> 
+		 <option value="NOM_PRODUCTO">Nombre del producto:</option> 
 		  <option value="UNIANDEADES_REQMAYOR">Unidades requeridas mayores a:</option> 
 		 <option value="UNIANDEADES_REQMENOR">Unidades requeridas menores a:</option>
 		 <option value="COSTO_VENTAMAYOR">Costo de venta mayor a:</option>
