--- a/Prodandes/data/html/darPedidos.htm
+++ b/Prodandes/data/html/darPedidos.htm
@@ -60,12 +60,12 @@
 		  <option value="UNIDADES_PRODUCCIONMAYOR">Unidades de Produccion mayor a:</option>
 		 <option value="UNIDADES_PRODUCCIONMENOR">Unidades de Produccion menor a:</option> 
 		  <option value="TERMINADO">Estan terminadas las unidades en espera</option> 
-		  <option value="MATERIAL">Materiales requeridos</option> 
+		  <option value="M.NOMBRE">Materiales requeridos</option> 
 		  <option value="CANTIDAD_MATERIALMAYORA">Cantidad de material requerido mayor a</option>
 		 <option value="CANTIDAD_MATERIALMENORA">Cantidad de material requerido menor a</option>
 		  
 		  <option value="TIPO">Tipo de material</option>
-          <option value="TIEMPO_ENTREGAMAYOR">Tiempo de entrega menor a</option>  
+          <option value="TIEMPO_ENTREGAMAYOR">Tiempo de entrega mayor a</option>  
           <option value="TIEMPO_ENTREGAMenor">Tiempo de entrega menor a</option> 
           		 <option value="NUMEROREGISTRO">Numero de Registro</option>
                    <option value="NOM_RP_LEGAL">Nombre de representante legal</option> 
