--- a/Prodandes/data/html/home.html
+++ b/Prodandes/data/html/home.html
@@ -36,7 +36,7 @@
 							<li><a href="ServletRegistrarEntregaPedidoCliente.htm">Registrar entrega de Pedido</a></li>
 							<li><a href="etapasProduccionMayorMovimiento.htm">Mayor movimiento en fechas</a></li>
 							<li><a href="consultarExistenciaUnMaterial.htm">Existencia material</a></li>
-							<li><a href="CancelarPedido.htm">Cancelar Pedido de Producto</a></li>
+							<li><a href="cancelarPedidoProductos.htm">Cancelar Pedido de Producto</a></li>
 					        <li><a href="darClientes.htm">Dar Clientes</a></li>
 					        <li><a href="darPedidos.htm">Dar Pedidos</a></li>
 					       
