Ya caci cancela completo
Falta materiales cuadrar esa vuelta

--- a/Prodandes/data/html/cancelarPedidoProductos.htm
+++ b/Prodandes/data/html/cancelarPedidoProductos.htm
@@ -51,7 +51,7 @@
 		    <input type="text" name="producto" size="12" style="border: 1px solid #666666; font-size:20pt">
 		  </p>
           <p>
-		<input type="submit" name="button" id="button" value="Verificar Pedidos" />
+		<input type="submit" name="button" id="button" value="Verificar Pedido" />
 		</p>
 		</form>
 		<p>&nbsp;</p>
