commit mas funcional que el de javi

--- a/Prodandes/data/html/buscar.htm
+++ b/Prodandes/data/html/buscar.htm
@@ -40,6 +40,8 @@
 		<p>Realice aqui sus busquedas relacionandas a las empresas.</p>
 		</div>
 		<p><h4><a href="buscarMaterialForm.htm"><FONT SIZE=5>Buscar material</font></a></h4></p>
+		<p><h4><a href="buscarMaterialID.htm"><FONT SIZE=5>Buscar material por ID</font></a></h4></p>
+		<p><h4><a href="consultarEjecucion.htm"><FONT SIZE=5>Consultar ejecucion de etapa de produccion</font></a></h4></p>
 		<p><h4><a href="buscarOperarioProductivo.htm"><FONT SIZE=5>Buscar operario mas productivo</font></a></h4></p>
 		<p><h4><a href="darProveedores.htm"><FONT SIZE=5>Consultar proveedores</font></a></h4></p>
 		<p>&nbsp;</p>
