--- a/Prodandes/data/html/buscarMaterialID.htm
+++ b/Prodandes/data/html/buscarMaterialID.htm
@@ -39,7 +39,7 @@
 		<h3><FONT SIZE=8>Buscar material por ID</font></h3>
 		<p>&nbsp;</p>
 		</div>
-		<form id="form1" name="form1" method="post" action="buscarMaterialRes.htm">
+		<form id="form1" name="form1" method="post" action="materialesId.htm">
 		  <p>
 		    <label for="material"><FONT SIZE=7>ID Material:</font></label> 
 		    <input type="text" name="material" size="12" style="border: 1px solid #666666; font-size:20pt">
