Jesus on his cross

--- a/Prodandes/data/html/darLosPedidos.htm
+++ b/Prodandes/data/html/darLosPedidos.htm
@@ -45,7 +45,7 @@
 		    <label for="tipo"><FONT SIZE=7>Tipo:</font></label>
             <input type="text" name="tipo" size="12" style="border: 1px solid #666666; font-size:20pt">
           </p>
-		    <label for="costoMayor"><FONT SIZE=7>Numero de pedidos:</font></label> 
+		    <label for="costoMayor"><FONT SIZE=7>Costo mayor a :</font></label> 
 		    <input type="text" name="costoMayor" size="12" style="border: 1px solid #666666; font-size:20pt">
 		  </p>
            
