--- a/Prodandes/data/html/consultarNOEjecucion.htm
+++ b/Prodandes/data/html/consultarNOEjecucion.htm
@@ -36,10 +36,10 @@
 		<body>
 		<div id="bg"></div>
 		<div id="carousel"><div>
-		<h3><FONT SIZE=8>CONSULTAR EJECUCIÓN DE ETAPAS DE PRODUCCIÓN</font></h3>
+		<h3><FONT SIZE=8>CONSULTAR EJECUCIÓN DE ETAPAS DE PRODUCCIÓN QUE NO CORRESPONDEN</font></h3>
 		<p>&nbsp;</p>
 		</div>
-		<form id="form1" name="form1" method="post" action="etapaFechas.htm">
+		<form id="form1" name="form1" method="post" action="DarNOEtapasFechaRes.htm">
 		  <p>
 		    <label for="material"><FONT SIZE=7>Fecha 1:</font></label> 
 		    <input type="text" name="fecha1"  placeholder="DD-MM-YYYY" size="12" style="border: 1px solid #666666; font-size:20pt">
