--- a/Prodandes/data/html/buscar.htm
+++ b/Prodandes/data/html/buscar.htm
@@ -44,7 +44,7 @@
 		<p><h4><a href="consultarEjecucion.htm"><FONT SIZE=5>Consultar ejecucion de etapa de produccion</font></a></h4></p>
 		<p><h4><a href="buscarOperarioProductivo.htm"><FONT SIZE=5>Buscar operario mas productivo</font></a></h4></p>
 		<p><h4><a href="darProveedores.htm"><FONT SIZE=5>Consultar proveedores</font></a></h4></p>
-		<p><h4><a href="consultarNOEjecucion.htm"><FONT SIZE=5>Consultar proveedores</font></a></h4></p>
+		<p><h4><a href="consultarNOEjecucion.htm"><FONT SIZE=5>Consultar Ejecucion NO</font></a></h4></p>
 		
 		<p>&nbsp;</p>
 		</body>
