--- a/Prodandes/data/html/consultarEtapas.htm
+++ b/Prodandes/data/html/consultarEtapas.htm
@@ -49,7 +49,7 @@
 		    </blockquote>
 		  </blockquote>
 		</blockquote>
-		<form id="form1" name="form1" method="post" action="../git/Prodandes/data/html/ServletRegistroEfectivo.htm">
+		<form id="form1" name="form1" method="post" action="servletConsultarEtapas2.htm">
 		  <p>
 		    <label for="fecha1"> Fecha 1:</label> 
 		      <input type="text" name="fecha1"/>
@@ -57,8 +57,6 @@
 		  <p>
 		    <label for="fecha2"> Fecha 2:</label> 
 		      <input type="text" name="fecha2"/>
-		  </p>
-		    <input type="submit" name="button" id="button" value="Consultar" />
 		  </p>
           <label for="opcion"><FONT SIZE=7>Opcion:</font></label> 
 		 <select name="opcion">
@@ -68,6 +66,8 @@
 		 <option value="rango">Costo</option> 
 		 </select>
          </p>
+		 <input type="submit" name="button" id="button" value="Consultar" />
+		 </p>
 		</form>
 		<p>&nbsp;</p>
 		</body>
