--- a/Prodandes/data/html/consultarMaterialMasUtilizado.htm
+++ b/Prodandes/data/html/consultarMaterialMasUtilizado.htm
@@ -49,7 +49,7 @@
 		    </blockquote>
 		  </blockquote>
 		</blockquote>
-		<form id="form1" name="form1" method="post" action="ServletRegistroEfectivo.htm">
+		<form id="form1" name="form1" method="post" action="materialMasUsado.htm">
 		  <p>
 		    <label for="fecha1"> Fecha 1:</label> 
 		      <input type="text" name="fecha1"/>
