--- a/Prodandes/data/html/modificarEstacion2.htm
+++ b/Prodandes/data/html/modificarEstacion2.htm
@@ -39,7 +39,7 @@
 		<h4>Modificar estado de etapa de produccion</h4>
 		<p>Dada una estación de producción y el cambio de estado deseado, se modifica la información existente para reflejar ese  cambio. </p>
 		</div>
-		<form id="form1" name="form1" method="post" action="servletCambiarEstado.htm">
+		<form id="form1" name="form1" method="post" action="cambiarEstado2.htm">
 		  <p>
 		    <label for="nombre"><FONT SIZE=7>Numero estacion:</font></label> 
 		    <input type="text" name="nombre" size="12" style="border: 1px solid #666666; font-size:20pt">
