--- a/Prodandes/data/html/registrarPedido2.htm
+++ b/Prodandes/data/html/registrarPedido2.htm
@@ -35,7 +35,7 @@
 		
 		<body>
 		<h3>Solicitar la produccion de un cierto volumen de productos</h3>
-		<form id="form1" name="form1" method="post" action="servletVerificarPedido.htm">
+		<form id="form1" name="form1" method="post" action="servletRegistrarPedido2.htm">
 		  <p>	
 		    <label for="producto2">Producto:</label> 
 		      <input type="text" name="producto" producto="producto2" />
@@ -49,9 +49,7 @@
 		    <input type="date" name="fecha" fecha="fecha2" />
 		  </p>
           <input type="submit" name="button" id="button" class = "green-btn" value="Solicitar" />
-		  </p>
-		
-		
+		  </p>		
 		</form>
 		<p>&nbsp;</p>
 		</div>
